// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forms AppForm snapshot matches 1`] = `null`;

exports[`Forms AppFormField snapshot matches 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#f8f4f4",
        "borderRadius": 25,
        "flexDirection": "row",
        "marginVertical": 10,
        "padding": 15,
      },
      Object {
        "width": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    placeholderTextColor="#6e6969"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#0c0c0c",
        "fontFamily": "Avenir",
        "fontSize": 18,
      }
    }
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`Forms Error Message snapshot matches 1`] = `null`;

exports[`Forms FormImagePicker snapshot matches 1`] = `
<View>
  <RCTScrollView
    horizontal={true}
    onContentSizeChange={[Function]}
  >
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f8f4f4",
              "borderRadius": 15,
              "height": 100,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": 100,
            }
          }
        >
          <View
            color="#6e6969"
            name="camera"
            size={40}
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Forms SubmitButton snapshot matches 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fc5c65",
      "borderRadius": 25,
      "justifyContent": "center",
      "marginVertical": 10,
      "opacity": 1,
      "padding": 15,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontSize": 18,
        "fontWeight": "bold",
        "textTransform": "uppercase",
      }
    }
  >
    test
  </Text>
</View>
`;
